bug 76848: Regression in handling global fonts setting logfont parameters r=ftang sr=blizzard